# Msg-Twilio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
api/: urls.py  views.py
home/: forms.py  urls.py  views.py
home/templates/: send_sms.html
mt/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
order/: admin.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/templates/: order_confirmation_email.html  order_detail.html  order_determinate.html  order_form.html
